# mtp-spec

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
conformance/fixtures/: README.md
conformance/fixtures/drift/cross-report/mock-vs-real/: fixture.yaml
conformance/fixtures/drift/self-score/deviation-reference/: fixture.yaml
conformance/fixtures/drift/self-score/mock-reference/: fixture.yaml
conformance/fixtures/l1-packages/invalid/missing-policy/: fixture.yaml  package.yaml
conformance/fixtures/l1-packages/valid/golden-package/: fixture.yaml
conformance/fixtures/l1-registry/valid-approval/: fixture.yaml
conformance/fixtures/l1-registry/valid-entry/: fixture.yaml
conformance/fixtures/l1-registry/valid-manifest/: fixture.yaml
conformance/fixtures/l1-registry/valid-signature/: fixture.yaml
conformance/fixtures/l2-execution/deviation/: fixture.yaml  package.yaml
conformance/fixtures/l2-execution/escalated/: fixture.yaml  package.yaml
conformance/fixtures/l2-execution/failure/: fixture.yaml  package.yaml
conformance/fixtures/l2-execution/partial/: fixture.yaml  package.yaml
conformance/fixtures/l2-execution/skipped/: fixture.yaml  package.yaml
conformance/fixtures/l2-execution/success/: fixture.yaml  package.yaml
conformance/fixtures/l3-provenance/full-package/: fixture.yaml
conformance/fixtures/l3-redaction/clean/reference-package/: fixture.yaml
conformance/fixtures/l3-redaction/client-identifiers/client-name-leak/: fixture.yaml  package.yaml
conformance/fixtures/l3-redaction/pii/email-leak/: fixture.yaml  package.yaml
conformance/fixtures/l3-redaction/regulated/health-record-leak/: fixture.yaml  package.yaml
conformance/fixtures/l3-redaction/secrets/api-key-leak/: fixture.yaml  package.yaml
docs/: enterprise-reference-architecture-v1.0.md  linkedin-article-methodology-drift.md  v0.5-conformance-plan.md  v0.7-production-readiness.md
examples/: churn-risk-scoring-execution-report-v0.2.yaml  churn-risk-scoring-mock-execution-report-v0.2.yaml  churn-risk-scoring-v0.2.yaml  test-data-churn.csv  valuation-report-extraction.yaml
examples/benchmarks/: churn-risk-benchmark-mock-report-v0.7.yaml  churn-risk-benchmark-result-v0.7.yaml  churn-risk-benchmark-suite-v0.7.yaml  mock-adapter-certification-v0.7.yaml
examples/conversations/: churn-risk-scoring-draft-v0.7.yaml  churn-risk-scoring-session.md
examples/registry/: local-kms-key-provider-v1.0.yaml  registry.yaml
examples/registry/approvals/b2c3d4e5-f6a7-8901-bcde-f12345678901/1.0.0/: churn-risk-scoring.approval.v0.6.yaml
examples/registry/entries/: customer-churn-risk-scoring-1.0.0.registry-entry.yaml
examples/registry/signatures/b2c3d4e5-f6a7-8901-bcde-f12345678901/1.0.0/: churn-risk-scoring.signature.v0.6.yaml
examples/releases/: README.md  mtp-compatibility-contract-v1.0.yaml  mtp-conformance-summary-v1.0.json  mtp-provider-matrix-v1.0.yaml
schema/: mtp-adapter-certification-v0.7.json  mtp-approval-record-v0.6.json  mtp-benchmark-result-v0.7.json  mtp-benchmark-suite-v0.7.json  mtp-compatibility-contract-v1.0.json  mtp-execution-report-v0.2.json  mtp-key-provider-manifest-v1.0.json  mtp-package-v0.1.json  mtp-package-v0.2.json  mtp-provider-matrix-v1.0.json  mtp-registry-entry-v0.6.json  mtp-registry-manifest-v0.6.json  mtp-signature-envelope-v0.6.json
spec/: MTP-COMPATIBILITY-v1.0.md  MTP-REGISTRY-v0.6.md  MTP-SPEC-v0.1.md  MTP-SPEC-v0.2.md
tools/mtp-benchmark/: README.md  pyproject.toml
tools/mtp-benchmark/src/mtp_benchmark/: __init__.py  artifacts.py  cli.py  runner.py
tools/mtp-benchmark/tests/: conftest.py  test_cli.py
tools/mtp-conformance/: README.md  pyproject.toml
tools/mtp-conformance/src/mtp_conformance/: __init__.py  cli.py  fixtures.py  runner.py
tools/mtp-conformance/tests/: __init__.py  test_cli.py  test_fixtures.py  test_runner.py
tools/mtp-extract/: README.md  pyproject.toml
tools/mtp-extract/src/mtp_extract/: __init__.py  cli.py  conversation.py  heuristics.py  merge.py
tools/mtp-extract/tests/: conftest.py  test_cli.py
tools/mtp-lint/: README.md  pyproject.toml
tools/mtp-lint/src/mtp_lint/: __init__.py  cli.py  completeness_scorer.py  policy_gate.py  redaction_scanner.py  report.py  schema_validator.py
tools/mtp-lint/tests/: test_cli.py  test_completeness_scorer.py  test_policy_gate.py  test_redaction_scanner.py  test_schema_validator.py
tools/mtp-registry/: README.md  pyproject.toml
tools/mtp-registry/src/mtp_registry/: __init__.py  artifacts.py  cli.py  providers.py  workflows.py
tools/mtp-registry/tests/: __init__.py  conftest.py  test_artifacts.py  test_cli.py  test_workflows.py
tools/mtp-release/: README.md  pyproject.toml
tools/mtp-release/src/mtp_release/: __init__.py  artifacts.py  builder.py  cli.py
tools/mtp-release/tests/: conftest.py  test_cli.py
tools/mtp-run/: README.md  pyproject.toml
tools/mtp-run/src/mtp_run/: __init__.py  adapters.py  cli.py  drift.py  executor.py  io_utils.py  prompt_builder.py  report_builder.py  reporting.py  response_parser.py
tools/mtp-run/src/mtp_run/adapters/: __init__.py  anthropic.py  mock.py  openai.py
tools/mtp-run/tests/: test_cli.py  test_drift.py  test_executor.py  test_prompt_builder.py  test_report_builder.py  test_response_parser.py
