[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mtp-run"
version = "1.0.0"
description = "Reference runtime CLI for executing MTP (Methodology Transfer Protocol) packages"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Lubor Fedák", email = "lubor@codemoravia.com" },
]
keywords = ["mtp", "methodology", "ai", "execution", "runtime"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "jsonschema>=4.20.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.50.0"]
all = ["anthropic>=0.40.0", "openai>=1.50.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
mtp-run = "mtp_run.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mtp_run"]
